hobby.css
#hobby{
    width: 80%;
    height: auto;
    background-color: #bbdefb;
    margin: 0% 0% 5% 8%;
    padding: 1% 1% 1% 1%;
}

/*test1*/

#Gaming{
    background-image: url(Storage/Images/testImage1.png);
}

#trigger{
    width: 100%;
}

.oddBlk{
    margin: 3% 3%;
    width: 250px;
    height: 250px;
    background-size: 250px 250px;
    background-repeat: no-repeat;
    background-color: #2da0ff;
    transition: width 1s;
}

#testText{
    visibility: hidden;
}

.oddBlk:hover p{
    animation: visibleText 1s ease-in infinite;
}

.oddBlk:hover{
    box-shadow: 10px 10px 5px lightsalmon;
    animation: imageProp 2s ease-in-out 50ms infinite alternate;
    width: 650px;
    height: 250px;
}

@keyframes visibleText {
        0%{visibility: visible;
            transform: translate(40%, 5px);}
        100%{visibility: visible;
            transform: translate(40%, 5px);}
}

@keyframes imageProp {
    0% {box-shadow: 10px 10px 5px lightsalmon;
        background-image: url(Storage/Images/testImage1.png);
        background-size: 250px 250px;
        background-repeat: no-repeat;
        }
    50% {box-shadow: 10px 10px 5px blue;}
    100% {box-shadow: 10px 10px 5px black;
        background-image: url(Storage/Images/testImage2.png);
        background-size: 250px 250px;
        background-repeat: no-repeat;
        }
}

/*test 2*/

.evenBlk{
    width: 250px;
    height: 250px;
    background-image: url(Storage/Images/testImage1.png);
    background-size: 250px 250px;
    background-repeat: no-repeat;
    transform: translate(200px, 0px);
    background-color: #2da0ff;
    transition: width 1s;
}

.evenBlk:hover{
    width: 650px;
    animation: imageProp 2s ease-in-out 50ms infinite alternate;
}

